# ash

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LANGSMITH.md  README.md  docker-compose.yml  justfile  manage.py  pyproject.toml
.claude/: launch.json
.claude/skills/ai-first-engineering/: SKILL.md
.claude/skills/blueprint/: SKILL.md
.claude/skills/prompt-optimizer/: SKILL.md
.github/workflows/: ci.yml
apps/house/: admin.py  apps.py  models.py
apps/house/migrations/: 0001_initial.py
config/: asgi.py  urls.py  wsgi.py
config/settings/: base.py  dev.py  prod.py
docs/: ONBOARD_A_PROJECT.md  best_practices.md  configuration.md  integrations.md
docs/plan/: agent_runtime_and_connectors_plan.md  agent_task_dispatch_plan.md  ash_architecture_and_plan.md  deployment_topology_and_code_extraction_plan.md  langchain_langgraph_usage.md  loop_engineered_sdlc_plan.md  per_story_fanout_and_oversight_plan.md
docs/sources/: agent_architecture.md  ai-pm-engineering-multi-agent-boilerplate-design.md  ai-pm-engineering-multi-agent-boilerplate.md
docs/superpowers/plans/: 2026-06-12-spec-file-path.md
docs/superpowers/specs/: 2026-06-12-spec-file-path-design.md
engine/src/ash/: config.py  llm.py  main.py  pipeline.py  state.py
openspec/: config.yaml
openspec/changes/ui-flow-overhaul/: design.md  proposal.md  tasks.md
openspec/changes/workflow-builder/: design.md  proposal.md  tasks.md
openspec/specs/agent-loop/: spec.md
openspec/specs/api/: spec.md
openspec/specs/coding-agent/: spec.md
openspec/specs/connectors/: spec.md
openspec/specs/hitl/: spec.md
openspec/specs/pm-agent/: spec.md
openspec/specs/story-fanout/: spec.md
projects/: edx-platform.yaml  plane.yaml
skills/plane/: SKILL.md
src/ash/: __init__.py  app_context.py  cli.py  gates.py  schemas.py
src/ash/admin/: __init__.py  _compat.py  auth.py  security.py  spec_upload.py  users.py  views.py
src/ash/agents/: __init__.py  base.py  coding.py  dev.py  estimates.py  fixer.py  intake.py  pm.py  research.py  research_doc.py  reviewer.py  rfc.py  spec_validator.py  worktree.py
src/ash/api/: __init__.py  app.py  routes.py  schemas.py
src/ash/clients/: __init__.py  board.py  chroma.py  code_intel.py  git_repo.py  github.py  pr.py
src/ash/config/: __init__.py  settings.py
src/ash/db/: __init__.py  base.py  crypto.py  exchanges.py  metrics.py  models.py  runs.py  stories.py  tasks.py  workflows.py
src/ash/documents/: __init__.py  reader.py
src/ash/graph/: __init__.py  builder.py  checkpointer.py  dispatcher.py  nodes.py  runner.py  state.py  stories.py
src/ash/integrations/: __init__.py  base.py  github.py  jira.py  mcp.py  plane.py  registry.py  service.py
src/ash/llm/: __init__.py  factory.py
src/ash/observability/: langfuse.py  langsmith.py  logging.py
src/ash/sinks/: __init__.py  base.py  file.py  jira.py  plane.py  service.py
src/ash/toolkits/: __init__.py  base.py  board.py  codebase.py  dev.py
tests/: test_app_context.py  test_config.py  test_gates.py  test_llm_factory.py  test_schemas.py  test_settings.py
tests/admin/: test_admin_users.py  test_boolean_widget.py  test_spec_upload.py
tests/agents/: conftest.py  test_base_generate.py  test_coding.py  test_dev.py  test_estimates.py  test_fixer.py  test_intake_spec_file.py  test_pm.py  test_research_doc.py  test_reviewer.py  test_rfc.py  test_spec_validator.py  test_stub_agents.py  test_workflow_policy.py
tests/api/: test_runs.py  test_uploads.py
tests/clients/: test_chroma.py  test_github.py
tests/db/: test_exchanges.py  test_models.py  test_runs.py  test_workflows.py
tests/documents/: test_reader.py
tests/graph/: test_builder.py  test_intake_routing.py  test_nodes.py  test_pm_workbench.py  test_resume.py  test_runner.py  test_state.py  test_stories.py
tests/integrations/: test_mcp.py  test_providers.py  test_validation.py
tests/sinks/: test_selection.py  test_sinks.py
tests/toolkits/: test_dev.py
tests/utils/: test_file_extract.py
tests/web/: test_routes_helpers.py
(+46 files in other folders)
