[project]
name = "ash"
version = "0.1.0"
description = "Agentic Software House (ASH) — a reusable, multi-tenant agent loop engine (PM/Research/Dev/QA/Reviewer/Fixer) + Django control plane"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "pydantic>=2.9.0",
    "pyyaml>=6.0",
    "requests>=2.32.0",
    "python-dotenv>=1.0.1",
    "GitPython>=3.1.43",
]

[project.optional-dependencies]
server = ["Django>=5.0"]
dev = ["pytest>=8.0", "ruff>=0.7"]

[project.scripts]
ash = "ash.main:cli"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

# The engine package lives under engine/src (the only importable Python package the build ships).
# Django code (apps/, config/) is run via manage.py, not packaged.
[tool.setuptools.packages.find]
where = ["engine/src"]

# ── Ruff: linter + formatter (replaces flake8 + isort + black) ──
[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["**/migrations/*", ".venv", "runtime"]

[tool.ruff.lint]
# E/W pycodestyle, F pyflakes, I isort, B bugbear, UP pyupgrade, C4 comprehensions
select = ["E", "W", "F", "I", "B", "UP", "C4"]
# str+Enum is a deliberate, pydantic/JSON-friendly choice; don't force StrEnum.
ignore = ["UP042"]

[tool.ruff.lint.isort]
known-first-party = ["ash", "apps", "config"]

[tool.ruff.format]
quote-style = "double"

# ── pytest ──
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
