[project]
name = "ash"
version = "0.1.0"
description = "Agentic Software House (ASH) — a reusable, multi-tenant agent loop engine (PM/Research/Coding/Reviewer/Fixer) on LangGraph + FastAPI"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.1",
    "langchain-core>=1.0",
    "langchain-anthropic>=1.0",
    "langchain-openai>=1.0",
    "langgraph>=1.0",
    "langgraph-checkpoint-postgres>=2.0",
    "langchain-mcp-adapters>=0.3",
    "psycopg[binary,pool]>=3.2",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "GitPython>=3.1.43",
    "python-dotenv>=1.0.1",
    # app DB + admin + UI
    "sqlalchemy[asyncio]>=2.0",
    "sqladmin>=0.20",
    "cryptography>=43.0",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "itsdangerous>=2.2",
    # document ingestion for the PM agent (pdf/docx/md/txt → text via LangChain loaders)
    "langchain-community>=0.3",
    "pypdf>=5.0",
    "docx2txt>=0.8",
    # observability
    "structlog>=24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "mypy>=1.13",
    "types-PyYAML>=6.0",
    "aiosqlite>=0.20",
]

[project.scripts]
ash = "ash.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

# The engine package lives under src/ (the single importable package the build ships).
[tool.setuptools.packages.find]
where = ["src"]

# ── Ruff: linter + formatter ──
[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [".venv", "runtime"]

[tool.ruff.lint]
# E/W pycodestyle, F pyflakes, I isort, B bugbear, UP pyupgrade, C4 comprehensions, ASYNC flake8-async
select = ["E", "W", "F", "I", "B", "UP", "C4", "ASYNC"]
# str+Enum is a deliberate, pydantic/JSON-friendly choice; don't force StrEnum.
ignore = ["UP042"]

[tool.ruff.lint.isort]
known-first-party = ["ash"]

[tool.ruff.format]
quote-style = "double"

# ── mypy: strict, enforced in CI ──
[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
packages = ["ash"]
# third-party libs without bundled type stubs
[[tool.mypy.overrides]]
module = [
    "git", "git.*", "langgraph.*", "langchain_anthropic.*", "langchain_openai.*",
    "sqladmin.*", "langchain_community.*", "docx2txt.*",
]
ignore_missing_imports = true

# ── pytest ──
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"
